--- a/about/main.scss
+++ b/about/main.scss
@@ -36,12 +36,16 @@ p {
   }
   button {
     font-size: 1.5rem;
-    padding:1rem .5rem;
+    padding:.5rem;
   }
 }
 @media screen and (max-width:768px) {
   p{
     padding: 5% 8%;
+  }
+  body{
+    min-height: 90vh;
+    max-height: 100%;
   }
 }
 //medium (landscape tab)
@@ -60,18 +64,13 @@ p {
   }
  
 }
-// @media screen and (min-width:1200px){
-//   html{
-//       font-size: 145%;
-//   }
-// }
-@media screen and (max-height:600px){
-  button{
-    height: 9vh;
+@media screen and (min-width:1200px){
+  html{
+      font-size: 130%;
   }
 }
-@media screen and(max-height:768px)and(min-height:600px){
+@media screen and (max-height:600px){
   button{
-    height: 10vh;
+    height: 3.5rem;
   }
 }
