--- a/home/main.css
+++ b/home/main.css
@@ -90,23 +90,24 @@ img {
   }
   button {
     width: 45%;
-    height: 13vh;
+    height: 14vh;
   }
 }
 
 @media screen and (max-height: 900px) and (max-width: 600px) {
   button {
-    height: 11vh;
+    height: 3.5rem;
   }
 }
 
 .swal2-popup {
-  max-height: 90vh;
-  max-width: 90vw;
+  height: 100%;
+  margin-top: 3rem;
 }
 
 .swal2-styled.swal2-confirm {
   width: 15vw;
+  height: 3rem;
   background-color: #97c2db;
 }
 /*# sourceMappingURL=main.css.map */
